--- a/labs/package.json
+++ b/labs/package.json
@@ -10,5 +10,9 @@
     "challenge"
   ],
   "author": "juaniloh, jojoriveraa",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0"
+  }
 }
