--- a/labs/package.json
+++ b/labs/package.json
@@ -12,6 +12,7 @@
   "author": "juaniloh, jojoriveraa",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^5.4.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
   }
