--- a/labs/package.json
+++ b/labs/package.json
@@ -4,7 +4,8 @@
   "description": "labs challenge",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine"
+    "test": "jasmine",
+    "build": "eslint src --ext .js  --fix && webpack"
   },
   "keywords": [
     "challenge"
@@ -12,7 +13,13 @@
   "author": "juaniloh, jojoriveraa",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^1.0.0",
     "eslint": "^5.4.0",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.22.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
   }
