--- a/labs/package.json
+++ b/labs/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "jasmine",
-    "build": "eslint src --ext .js  --fix && webpack",
+    "build": "eslint src --ext .js  --fix && npm run dev-test && webpack",
     "server": "nodemon server/server.js",
     "build-dev": "eslint src --ext .js  --fix && webpack --watch",
-    "dev": "concurrently --kill-others \"npm run build-dev\" \"npm run server\""
+    "dev": "concurrently --kill-others \"npm run build-dev\" \"npm run server\"",
+    "dev-test": "babel-node spec/runSpecs",
+    "ui-tests": "karma start --singleRun"
   },
   "keywords": [
     "challenge"
@@ -16,12 +18,20 @@
   "author": "juaniloh, jojoriveraa",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.0.0-rc.2",
+    "@babel/node": "^7.0.0-rc.2",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.0",
     "eslint": "^5.4.0",
     "html-webpack-plugin": "^3.2.0",
+    "jasmine": "^3.2.0",
+    "karma": "^3.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.2",
+    "karma-webpack": "^3.0.0",
     "nodemon": "^1.18.3",
     "style-loader": "^0.22.1",
     "webpack": "^4.16.5",
