--- a/labs/package.json
+++ b/labs/package.json
@@ -38,5 +38,8 @@
     "style-loader": "^0.22.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.26.0"
   }
 }
